Fix mobile size issues. Navbar text wrap, navbar dropdown function. Replaced Bootstrap.min.js with Bootstrap.bundle.min.js

--- a/css/styles.css
+++ b/css/styles.css
@@ -244,6 +244,7 @@ strong {
   color: var(--primary-color);
   font-size: var(--h6-font-size);
   font-weight: var(--font-weight-bold);
+  white-space: normal; /* Allow the text to wrap */
 }
 
 .navbar-brand span {
